# AndroidTranscoder

./: README.md  test123.jks
app/: build.gradle
app/src/androidTest/java/com/github/transcoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeg/: build.sh  cmdutils.c  cmdutils.h  config.h  ffmpeg-cmd.cpp  ffmpeg.c  ffmpeg.h
app/src/main/cpp/ffmpeg/libavcodec/: libavcodec.pc  libavcodec.version
app/src/main/cpp/ffmpeg/libavfilter/: libavfilter.pc  libavfilter.version
app/src/main/cpp/ffmpeg/libavformat/: libavformat.pc  libavformat.version
app/src/main/cpp/ffmpeg/libavutil/: ffversion.h  libavutil.pc  libavutil.version
app/src/main/cpp/ffmpeg/libpostproc/: libpostproc.pc  libpostproc.version
app/src/main/cpp/ffmpeg/libswresample/: libswresample.pc  libswresample.version
app/src/main/cpp/ffmpeg/libswscale/: libswscale.pc  libswscale.version
app/src/main/java/com/github/transcoder/: MainActivity.java  TranscodeActivity.java
app/src/main/java/com/github/transcoder/bean/: VideoInfo.java
app/src/main/java/com/github/transcoder/jni/: FFmpegCmd.java
app/src/main/java/com/github/transcoder/util/: Gutil.java  MediaTool.java
app/src/main/res/drawable/: border_primary.xml
app/src/main/res/layout/: activity_transcode.xml  item_presets.xml  item_selected_preset.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml
app/src/test/java/com/github/transcoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
